# voice-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run  setup.cfg  setup.py  tox.ini
docs/getting-started/: first-time-config.md  installation.md  personalization.md  skills.md
docs/integrations/: hass.md  how.md  respeaker.md  spotify.md
src/: __main__.py  core.py  exceptions.py
src/interfaces/: __init__.py
src/interfaces/speech/: __init__.py  microphone_stream.py  speech_to_text.py  text_to_speech.py
src/interfaces/voice/: __init__.py  keyword.py  microphone_stream.py  speech_to_text.py  text_to_speech.py
src/modules/: __init__.py  hass.py
src/nlp/: __init__.py  nlp_result.py  processor.py
src/nlp/regex/: __init__.py  expression.py
src/skills/: __init__.py  examples.py
src/utils/: __init__.py  config.py  datastruct.py  debug.py
src/voiceassistant/: __init__.py  __main__.py  abstract.py  config.py  const.py  core.py  exceptions.py  setup.py
src/voiceassistant/addons/: __init__.py  create.py  keyword.py  keyword_addon.py  speech.py
src/voiceassistant/data/: __init__.py
src/voiceassistant/data/audio/: __init__.py
src/voiceassistant/data/nlp/: __init__.py  regex.yaml
src/voiceassistant/data/sample_config/: __init__.py  configuration.yaml
src/voiceassistant/integrations/: __init__.py  base.py  general.py  hass.py  respeaker.py  skills.py
src/voiceassistant/integrations/hass/: __init__.py  actions.py  const.py  skills.py  utils.py
src/voiceassistant/integrations/spotify/: __init__.py  client.py  const.py
src/voiceassistant/interfaces/: __init__.py  base.py
src/voiceassistant/interfaces/http/: __init__.py  api_app.py  auth.py  helpers.py
src/voiceassistant/interfaces/speech/: __init__.py  keyword.py  microphone_stream.py  speech_to_text.py  text_to_speech.py
src/voiceassistant/modules/: spotify.py
src/voiceassistant/nlp/: __init__.py  base.py  nlp_result.py  processor.py
src/voiceassistant/nlp/regex/: __init__.py  expression.py  skill.py
src/voiceassistant/skills/: __init__.py  actions.py  create.py  examples.py  hass.py  sample_skill.py  skills.py
src/voiceassistant/utils/: config.py  datastruct.py  log.py  network.py  volume.py
src/voiceassistant/utils/hass/: __init__.py  actions.py  entities.py
tests/nlp/regex/: test_expression.py  test_skill.py
tests/testfiles/: configuration.yaml
