[metadata]
name = voiceassistant
version = 0.0.1
author = Vadim Titov
author_email = titov.hse@gmail.com
description = Customizable voice assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vadimtitov/voice-assistant
project_urls =
    Bug Tracker = https://github.com/vadimtitov/voice-assistant/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
package_dir=
    =src
packages = find:
python_requires = ==3.8.*
install_requires =
    boto3 >= 1.9.71
    google-cloud-speech >= 2.2.0
    PyAudio >= 0.2.11
    six >= 1.11.0
    pyyaml >= 5.4.1
    pvporcupine >= 1.9.3
    iterators >= 0.0.2
    hypothesis >= 5.16.0

[options.packages.find]
where=src

[options.extras_require]
test = pytest

[options.package_data]
src.voiceassistant.config = google_credentials.json, configuration.yaml

[coverage:run]
branch = true
parallel = true

[coverage:report]
skip_covered = true
show_missing = true
sort = Cover
