[metadata]
name = voiceassistant
author = Vadim Titov
author_email = titov.hse@gmail.com
description = Open-source customizable voice assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vadimtitov/voice-assistant
project_urls =
    Bug Tracker = https://github.com/vadimtitov/voice-assistant/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Home Automation

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    boto3 >= 1.9.71, < 2
    google-cloud-speech >= 2.2.0, < 3
    PyAudio >= 0.2.11
    six >= 1.11.0
    pyyaml >= 5.4.1
    pvporcupine >= 1.9.3
    iterators == 0.0.2
    hypothesis >= 5.16.0
    hassapi >= 0.1.1
    pixel-ring == 0.1.0
    flask >= 2.0.1, <3
    gpiozero >= 1.6.2, < 2
    diskcache >= 5.2.1, < 6
    tekore == 4.3.0
    tenacity >= 8.0.1, < 9
    pyalsaaudio >= 0.9.0, < 1

[options.packages.find]
where=src

[options.package_data]
voiceassistant.data = */*.yaml, */*.json, */*.mp3

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    vass=voiceassistant.__main__:main

[coverage:run]
branch = true
parallel = true

[coverage:report]
skip_covered = true
show_missing = true
sort = Cover
